Fix broken CSS selector

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -48,11 +48,11 @@ h4{
 }
 
 *[epub|type~="z3998:valediction"],
-*[epub|type~="se:letter:dateline"]{
+*[epub|type~="se:letter.dateline"]{
 	text-align: right;
 }
 
-*[epub|type~="se:letter:dateline"] + *{
+*[epub|type~="se:letter.dateline"] + *{
 	text-indent: 0;
 }
 
